[project]
name = "shift-tt"
version = "0.1.0"
description = "Test task for SHIFT"
authors = [
    {name = "Bodgan Ignatenko nichegons@gmail.com"}
]
requires-python = ">=3.14"
dependencies = [
    "fastapi[all] (>=0.136.3,<0.137.0)",
    "sqlalchemy (>=2.0.50,<3.0.0)",
    "alembic (>=1.18.4,<2.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "fastapi-users[sqlalchemy] (>=15.0.5,<16.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
